# vibecoding-sudoku

./: README.md  prd-chatgpt.md  pyproject.toml
PRD/: prd-bob.md  prd-chatgpt-v2.md  prd-copilot-gpt5.md  prd-gemini.md  prompt-for-prd.txt
sudoku/: __init__.py  board.py  generator.py  main.py  solver.py  ui.py
sudoku-pygame/: README.md  pyproject.toml
sudoku-pygame/sudoku/: board.py  ui.py
sudoku-pygame/tests/: test_generator.py
tests/: test_board.py  test_solver.py
