# pyproject.toml
# This project is aligned with PEP 621 (https://peps.python.org/pep-0621/)
# Poetry now recommends using the [project] table instead of [tool.poetry].

[project]
name = "sudoku"
version = "0.1.0"
description = "A minimalist Sudoku game built with Pygame."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Robert Boivin", email = "poivronjaune@gmail.com" }
]
keywords = ["sudoku", "pygame", "game"]
requires-python = ">=3.12,<3.13"

dependencies = [
    "pygame>=2.0.0"
]

# Project URLs (inline table, must be compact)
urls = { Homepage = "https://github.com/poivronjaune/vibecoding-sudoku", Repository = "https://github.com/poivronjaune/vibecoding-sudoku/tree/main/sudoku-pygame" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
sudoku = "sudoku.main:main"