[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = "A minimalist Sudoku game built with Pygame."
authors = ["Robert Boivin <poivronjaune@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/sudoku-pygame"
repository = "https://github.com/yourusername/sudoku-pygame"
keywords = ["sudoku", "pygame", "game"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pygame = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"